--- a/package.json
+++ b/package.json
@@ -7,12 +7,24 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
+    "@types/lodash": "^4.14.176",
     "@types/node": "^12.20.36",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/shortid": "0.0.29",
+    "axios": "^0.24.0",
+    "classnames": "^2.3.1",
+    "firebase": "^9.2.0",
+    "lodash": "^4.17.21",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loading-skeleton": "^3.0.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-visibility-sensor": "^5.1.1",
+    "shortid": "^2.2.16",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
